Fix navbar wrap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1151,7 +1151,7 @@ label {
   cursor: pointer;
   display: inline-block;
   margin: 1rem 0 1rem 2rem;
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 2rem;
   font-size: 1.4rem;
   font-weight: 700;
   letter-spacing: 1px;
@@ -1180,10 +1180,10 @@ label {
   cursor: pointer;
   display: inline-block;
   margin: 1rem 0 1rem 2rem;
-  padding: 1.5rem 3rem;
+  padding: 1.5rem 2rem;
   font-size: 1.4rem;
   font-weight: 700;
-  letter-spacing: 1px;
+  letter-spacing: 0.2px;
   line-height: 1.2;
   text-align: center;
   text-transform: uppercase;
